when all files where commited for the second time

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<li id="fifth"> Euros to Naira</li>
 		<li id="sixth"> SEK to Naira</li>
 	</ul>
- <p id="textBeforeInput">Enter Amount</p>
+ <p id="textBeforeInput">Enter Amount in Naira</p>
 
  <div class="inputArea">
 	<input type="text" name="">
