when I first commited by skipping the git add command. But note it will commit all files in the directory, and when we are moving or renaming files, its good to follow the normal procedures

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<li id="first"> Naira to Dollar</li>
 		<li id="second"> Naira to Euros</li>
 		<li id="third"> Naira to SEK</li>
-		<li id="fourth"> Dollar to Niara</li>
+		<li id="fourth"> Dollar to Niara Naira</li>
 		<li id="fifth"> Euros to Naira</li>
 		<li id="sixth"> SEK to Naira</li>
 	</ul>
